applications/kubernetes/mealie/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  selector: 
    matchLabels:
      app: mealie
  replicas: 1
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v2.8.0
        ports:
          - containerPort: 9000
            protocol: TCP
        resources:
          limits:
            memory: 1000Mi
        volumeMounts:
          - mountPath: /app/data
            name: mealie-data
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
