applications/kubernetes/mealie/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  selector:
    app: mealie
  ports:
    - protocol: web
      port: 9000
      protocol: TCP
      targetPort: 9000
